Fixing a boot time panic(when if_fwip is compiled into kernel) by renaming module name to something that wouldn't conflict with sys/dev/firewire/firewire.c.

Submitted by:	Cai, Quanqing <caiquanqing at gmail dot com>
PR:		kern/82727
MFC after:	3 days

Former-commit-id: ad811032d0ba29d438f7bab6f5485ada6c068c89